<resources>

    <!--for start page-->
    <string name="app_name">FitnessApp</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <!--    for signup/login page-->
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="signup_link"><u> New user? Click here to sign up!</u></string>
    <string name="login_link"><u> Have an account? Click here to log in!</u></string>
    <string name="notif_hint"><u>Enter a new notification</u></string>

    <!--    for new activity form-->
    <string-array name="activity_options">
        <item>Running</item>
        <item>Swimming</item>
        <item>Biking</item>
        <item>Hiking</item>
        <item>Boxing</item>
        <item>Weight Lifting</item>
        <item>Basketball</item>
        <item>Tennis</item>
        <item>Soccer</item>
    </string-array>
    <string-array name="intensity_options">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>